retrieveUnpackaged/objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>Furnish_Invoice_to__c</fullName>
        <description>SF-182</description>
        <label>Furnish Invoice to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USEPA RTP Finance Center</fullName>
                </value>
                <value>
                    <fullName>USEPA Cincinnati Finance Center</fullName>
                </value>
                <value>
                    <fullName>Purchase Card Transaction</fullName>
                </value>
                <value>
                    <fullName>No Cost Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_User_Types__c</fullName>
        <description>Application Approval</description>
        <label>General User Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Cross_Goal_Strategy__c</fullName>
        <description>Application Approval</description>
        <label>Goal/Cross-Goal Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_User_Types__c</fullName>
        <description>Application Approval</description>
        <label>Government User Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK( IF( ISBLANK( Prepare_Form_for__c ) ,
    Type_1_Owner_Contact__r.Grade__c ,
  Prepare_Form_for__r.Grade__c )),
&quot;[This field will populate after save.]&quot;,
IF( ISBLANK( Prepare_Form_for__c ) ,
    Type_1_Owner_Contact__r.Grade__c ,
  Prepare_Form_for__r.Grade__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org_Code__c</fullName>
        <formula>HR_Organization__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR Org Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HR Organization</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The HR Org doesn&apos;t exist.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HR Org</value>
            </filterItems>
            <filterItems>
                <field>Account.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Human_Resources_Office_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Human Resources Office (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>ORD-111</description>
        <label>ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITO_IMO_Telecom_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>ITO/IMO, Telecom (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>IT Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FormsXamw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Other_Specify__c</fullName>
        <description>Application Approval</description>
        <label>If Other, Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Replacing_Specify__c</fullName>
        <description>Application Approval</description>
        <label>If Replacing, Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_not_date_Fix_expected__c</fullName>
        <description>PRIAv5</description>
        <label>If not, date &quot;Fix&quot; expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_yes_please_describe__c</fullName>
        <description>SF-182</description>
        <label>If yes, please describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immediate_Supervisor_s_Digital_Signature__c</fullName>
        <description>All</description>
        <label>Immediate Supervisor&apos;s Digital Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Supervisor_s_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All (not needed?  related field updated via approval process)</description>
        <label>Immediate Supervisor&apos;s Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect_Appropriation_Fund__c</fullName>
        <description>SF-182</description>
        <label>Indirect Appropriation / Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Costs_and_Appropriation__c</fullName>
        <defaultValue>&quot;Fund Chargeable&quot;</defaultValue>
        <description>SF-182</description>
        <label>Indirect Costs and Appropriation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Total__c</fullName>
        <description>SF-182</description>
        <formula>Per_diem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Information_Resource_Identifier__c</fullName>
        <description>Application Approval</description>
        <formula>Name</formula>
        <label>Information Resource Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Resource_Long_Title__c</fullName>
        <description>Application Approval</description>
        <label>Information Resource Long Title</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_Resource_Short_Title__c</fullName>
        <description>Application Approval</description>
        <label>Information Resource Short Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions_ORD111__c</fullName>
        <defaultValue>&apos;Please enter the title of this extramural action. If you are preparing the form for someone else, please type their name in the &quot;Prepare Form As Person Other Than Self&quot; field. As you type, the names available will appear. Select the correct one. Once you submit the form, the Originator field will update to correctly reflect that individual. Originators typically are Project Officers (POs), Principal Investigators (PIs), and Contracting Officer Representative (CORs).&apos;+BR()+BR()+&apos;If you are the originator do not enter anything into the &quot;Prepare Form As Person Other Than Self&quot; field.&apos;</defaultValue>
        <description>ORD-111</description>
        <label>Instructions</label>
        <length>580</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Direction__c</fullName>
        <description>Application Approval</description>
        <label>Interface Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interfacing_Info_Resource__c</fullName>
        <description>Application Approval</description>
        <label>Interfacing Info Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interim_Consideration__c</fullName>
        <description>PRIAv5</description>
        <label>Interim Consideration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Initiated</fullName>
                </value>
                <value>
                    <fullName>Registrant Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_Fix_in_house__c</fullName>
        <description>PRIAv5</description>
        <label>Is the &quot;Fix&quot; in-house?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_s_Describe_in_detail__c</fullName>
        <description>PRIAv5</description>
        <label>Issue(s) - Describe in detail</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description_10__c</fullName>
        <description>EPA-PCOR</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description_1__c</fullName>
        <description>EPA-1900-8a</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description_2__c</fullName>
        <description>EPA-1900-8a</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_10__c</fullName>
        <defaultValue>10</defaultValue>
        <description>EPA-PCOR</description>
        <label>Item Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Number_1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>EPA-1900-8a, EPA-PCOR</description>
        <label>Item Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Number_2__c</fullName>
        <defaultValue>2</defaultValue>
        <description>EPA-1900-8a, EPA-PCOR</description>
        <label>Item Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Price_10__c</fullName>
        <description>EPA-PCOR</description>
        <label>Item Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Price_1__c</fullName>
        <description>EPA-1900-8a</description>
        <label>Item Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Price_2__c</fullName>
        <description>EPA-1900-8a</description>
        <label>Item Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Quantity_10__c</fullName>
        <description>EPA-PCOR</description>
        <label>Item Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Quantity_1__c</fullName>
        <description>EPA-1900-8a</description>
        <label>Item Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Quantity_2__c</fullName>
        <description>EPA-1900-8a</description>
        <label>Item Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Items_turned_in_to_Human_Resources__c</fullName>
        <description>EPA-3110-1</description>
        <label>Items turned in to Human Resources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>EPA-PCOR</description>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Reassignment__c</fullName>
        <description>ORD-111</description>
        <label>Last Approval Reassignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_3160__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Type_1_Owner_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Risk_Assessment__c</fullName>
        <description>PRIAv5</description>
        <label>Late Risk Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Human Health</fullName>
                </value>
                <value>
                    <fullName>Ecological</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_QA_Organization__c</fullName>
        <description>ORD-111</description>
        <label>Lead QA Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaveBankInstructions__c</fullName>
        <defaultValue>&quot;https://oeiodsta-oeiodstadev.cs33.force.com/Leave_Bank_Instructions&quot;</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>Click here to view instructions:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Librarian_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Librarian (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Instructions__c</fullName>
        <defaultValue>&quot;To view calculated totals, please save the form.&quot;</defaultValue>
        <description>EPA-PCOR</description>
        <label>PCOR Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Total_Price_10__c</fullName>
        <description>EPA PCOR</description>
        <formula>Item_Quantity_10__c * Item_Price_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Total_Price_1__c</fullName>
        <description>EPA-1900-8a</description>
        <formula>Item_Quantity_1__c  *  Item_Price_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Total_Price_2__c</fullName>
        <description>EPA-1900-8a</description>
        <formula>Item_Quantity_2__c * Item_Price_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Application Approval</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community &amp; Social Services</fullName>
                </value>
                <value>
                    <fullName>Disaster Management</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environmental Management</fullName>
                </value>
                <value>
                    <fullName>Gen. Science &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
                <value>
                    <fullName>International Affairs &amp; Commerce</fullName>
                </value>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Natural Resources</fullName>
                </value>
                <value>
                    <fullName>Direct Services to Citizens</fullName>
                </value>
                <value>
                    <fullName>Knowledge Creation &amp; Management</fullName>
                </value>
                <value>
                    <fullName>Public Goods Creation &amp; Management</fullName>
                </value>
                <value>
                    <fullName>Regulatory Compliance &amp; Enforcement</fullName>
                </value>
                <value>
                    <fullName>Federal Financial Assistance</fullName>
                </value>
                <value>
                    <fullName>Transfers to States &amp; Local Governments</fullName>
                </value>
                <value>
                    <fullName>Controls &amp; Oversight</fullName>
                </value>
                <value>
                    <fullName>Internal Risk Management &amp; Mitigation</fullName>
                </value>
                <value>
                    <fullName>Legislative Relations</fullName>
                </value>
                <value>
                    <fullName>Planning &amp; Resource Allocation</fullName>
                </value>
                <value>
                    <fullName>Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Regulatory Development</fullName>
                </value>
                <value>
                    <fullName>Revenue Collection</fullName>
                </value>
                <value>
                    <fullName>Applied Research &amp; Science Support</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Geospatial Services</fullName>
                </value>
                <value>
                    <fullName>Administrative Management</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Human Resource Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Financial_Management_Office__c</fullName>
        <defaultValue>&quot;Office of the Comptroller, Cincinnati Finance Center or Appropriate Designee - Please print, and sign your name on this signature page next to the appropriate title and/or Program Office.&quot;</defaultValue>
        <description>EPA-3110-1</description>
        <label>Local Financial Management Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_Reference_Identifier__c</fullName>
        <description>EPA-PCOR</description>
        <label>Local Reference Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Training_Site__c</fullName>
        <defaultValue>&quot;Same as Mailing Address&quot;</defaultValue>
        <description>SF-182</description>
        <label>Location of Training Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MI__c</fullName>
        <description>EPA-3110-1</description>
        <label>MI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Management POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Management POC)</relationshipLabel>
        <relationshipName>Forms_Management_POC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>BAP Provisioning</description>
        <label>First/Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_and_Address_of_Vendor__c</fullName>
        <description>SF-182</description>
        <label>Name and Mailing Address of Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Course_or_Development_Activity__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Course_Title__c), 
&quot;[Will be populated by Course Title field.]&quot;, 
Course_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Course or Development Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Program__c</fullName>
        <description>ORD-111</description>
        <label>National Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Security_Info_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>National Security Info (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Government_Contribution_Cost__c</fullName>
        <description>SF-182</description>
        <label>Non-Government Contribution Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_contract_Actions__c</fullName>
        <description>ORD-111</description>
        <label>Non-contract Actions:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cooperative Agreement</fullName>
                </value>
                <value>
                    <fullName>CRADA/MTA</fullName>
                </value>
                <value>
                    <fullName>Interagency Agreement</fullName>
                </value>
                <value>
                    <fullName>Funds In</fullName>
                </value>
                <value>
                    <fullName>Funds Out</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Intramural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;This agreement must be signed by the nominee for Government training that exceeds 80 hours (or such other designated period, less than 80 hours as prescribed by the agency) for which the Government approves payment of training costs prior to the commencement of such training. Nothing contained in this agreement below shall be construed as limiting the authority of an agency to waive, in whole or in part, an obligation of an employee to pay expenses incurred by the Government in connection with the training.&quot;</defaultValue>
        <description>SF-182</description>
        <label>Note:</label>
        <length>515</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notified_this_is_the_last_negotiation__c</fullName>
        <description>PRIAv5</description>
        <label>Notified this is the last negotiation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Agency_Users__c</fullName>
        <description>Application Approval</description>
        <label>Number of Agency Users</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Anonymous_Public_Users__c</fullName>
        <description>Application Approval</description>
        <label>Number of Anonymous Public Users</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_External_Authenticated_Users__c</fullName>
        <description>Application Approval</description>
        <label>Number of External Authenticated Users</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Telephone2__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK( 
IF( ISBLANK( Prepare_Form_for__c ), 
Type_1_Owner_Contact__r.Phone , 
Prepare_Form_for__r.Phone
)), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ), 
Type_1_Owner_Contact__r.Phone , 
Prepare_Form_for__r.Phone
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_or_Region2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application Approval</description>
        <label>Office or Region</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HR_Org</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forms (Office or Region)</relationshipLabel>
        <relationshipName>Forms1yt744</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_or_Region__c</fullName>
        <description>Application Approval</description>
        <label>Office or Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>OAR</fullName>
                </value>
                <value>
                    <fullName>OARM</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OCSPP</fullName>
                </value>
                <value>
                    <fullName>OECA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OITA</fullName>
                </value>
                <value>
                    <fullName>OLEM</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
                <value>
                    <fullName>OW</fullName>
                </value>
                <value>
                    <fullName>R01</fullName>
                </value>
                <value>
                    <fullName>R02</fullName>
                </value>
                <value>
                    <fullName>R03</fullName>
                </value>
                <value>
                    <fullName>R04</fullName>
                </value>
                <value>
                    <fullName>R05</fullName>
                </value>
                <value>
                    <fullName>R06</fullName>
                </value>
                <value>
                    <fullName>R07</fullName>
                </value>
                <value>
                    <fullName>R08</fullName>
                </value>
                <value>
                    <fullName>R09</fullName>
                </value>
                <value>
                    <fullName>R10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_1__c</fullName>
        <description>Application Approval</description>
        <formula>CASE(Office_or_Region__c, 
&apos;AO&apos;, &apos;OFC OF ADMINISTRATOR&apos;,
&apos;OAR&apos;, &apos;OFC AIR AND RADIATION&apos;,
&apos;OARM&apos;, &apos;OFC ADMIN &amp; RES MGMT&apos;,
&apos;OCFO&apos;, &apos;OFC CHIEF FINCL OFCR&apos;,
&apos;OCSPP&apos;, &apos;OFFICE OF CS AND PP&apos;,
&apos;OECA&apos;, &apos;OFC ENF &amp; COMPL ASSURAN&apos;,
&apos;OEI&apos;, &apos;OFC OF ENVIRNMTL INFO&apos;,
&apos;OGC&apos;, &apos;OFC OF GENERAL COUNSEL&apos;,
&apos;OIG&apos;, &apos;OFC INSPECTOR GENERAL&apos;,
&apos;OITA&apos;, &apos;OFC INTERNTNL &amp; TRIB AF&apos;,
&apos;OLEM&apos;, &apos;OFC OF LAND &amp; EMER MGMT&apos;,
&apos;ORD&apos;, &apos;OFC RESEARCH &amp; DEVELOP&apos;,
&apos;OW&apos;, &apos;OFFICE OF WATER&apos;,
&apos;R01&apos;, &apos;REGION 1&apos;,
&apos;R02&apos;, &apos;REGION 2&apos;,
&apos;R03&apos;, &apos;REGION 3&apos;,
&apos;R04&apos;, &apos;REGION 4&apos;,
&apos;R05&apos;, &apos;REGION 5&apos;,
&apos;R06&apos;, &apos;REGION 6&apos;,
&apos;R07&apos;, &apos;REGION 7&apos;,
&apos;R08&apos;, &apos;REGION 8&apos;,
&apos;R09&apos;, &apos;REGION 9&apos;,
&apos;R10&apos;, &apos;REGION 10&apos;,
&apos;[This field will populate after save.]&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_2__c</fullName>
        <description>Application Approval</description>
        <formula>Office_or_Region2__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_Address__c</fullName>
        <description>SF-182</description>
        <label>Organization Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Role__c</fullName>
        <description>Application Approval</description>
        <label>Organization Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>